third_party/llvm-project/clang/test/CXX/special/class.free/p6.cpp
// RUN: %clang_cc1 -fsyntax-only -verify %s
#include <stddef.h>

struct A {
  void operator delete(void*) {
    (void)this; // expected-error {{invalid use of 'this' outside of a non-static member function}}
  }
  void operator delete[](void*) {
    (void)this; // expected-error {{invalid use of 'this' outside of a non-static member function}}
  }
};
